# pv112-project

./: .gitignore  CMakeLists.txt  README.md  main.py  requirements.txt
framework/: CMakeLists.txt
framework/01_window_final/: application.cpp  main.cpp
framework/02_shaders_final/: CMakeLists.txt  application.cpp
framework/02_shaders_final/shaders/: main.frag  main.vert  main2.frag
framework/03_draw_buffers_vaos/: data.hpp  main.cpp
framework/03_draw_buffers_vaos/shaders/: main.vert  main_vao.frag
framework/04_pipeline/: CMakeLists.txt  application.hpp  data.hpp  main.cpp
framework/04_pipeline/shaders/: main.frag
framework/05_uniforms/shaders/: main.vert
framework/07_framebuffer/: CMakeLists.txt  main.cpp
framework/07_framebuffer/shaders/: main.frag  main.vert  postprocess.frag
framework/08_ubo/: CMakeLists.txt  application.hpp  main.cpp
framework/framework/include/: camera.hpp
framework/include/: camera.hpp
framework/src/: camera.cpp  mesh.cpp  program.cpp
homeworks/: .clang-format  CMakeSettings.json  README.md
homeworks/01_window_final/: CMakeLists.txt  application.hpp
homeworks/02_shaders_final/: application.hpp  main.cpp
homeworks/02_shaders_final/shaders/: main2.vert
homeworks/03_draw_buffers_vaos/: CMakeLists.txt  application.cpp  application.hpp
homeworks/03_draw_buffers_vaos/shaders/: main_vao.vert
homeworks/04_pipeline/: application.cpp
homeworks/04_pipeline/shaders/: main.vert
homeworks/05_uniforms/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
homeworks/05_uniforms/shaders/: main.frag
homeworks/06_textures/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
homeworks/06_textures/shaders/: main.frag
homeworks/07_framebuffer/: application.cpp  application.hpp
homeworks/08_ubo/: application.hpp
homeworks/08_ubo/shaders/: draw_light.frag  draw_light.vert
homeworks/framework/src/: camera.cpp  utilities.cpp
project/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
project/shaders/: core.frag  core.vert  snake.frag  text.frag  text.vert  wall.frag  wall.vert
project/src/: audio.cpp  audio.hpp  food.cpp  food.hpp  game.cpp  game.hpp  gui.cpp  gui.hpp  settings.hpp  snake.cpp  snake.hpp  time.cpp  time.hpp  world.cpp  world.hpp
python/src/: settings.py  snake.py
src/: __init__.py  graphics.py  world.py
